# kami-reports

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  service.py  service_account_credentials.json  todo  uno_report_bot.sh
.github/workflows/: main.yml
credentials/: k_service_account_credentials.json
data/in/views/gb_views/: tb_inventory.sql
kami_reports/: app.py  app_t.py  billing_gsheet.py  components.py  constant.py  database.py  dataframe.py  filemanager.py  func_tools.py  imports.py  layout.py  messages.py  mkt_automation.py  notebook.ipynb  report_bot.py  report_notebook.ipynb  requirements.txt  todo
kami_reports/creds/: client_secret.json  token.json
kami_reports/data/in/: contact_sellers.sql  qy_beexp_orders.sql  qy_default_seller.sql  qy_participating_seller.sql  qy_sales_teams.sql  sales_teams.csv  vw_board_billings.sql  vw_customer_details.sql  vw_daily_billings.sql  vw_future_bills.sql  vw_monthly_billings.sql
kami_reports/data/in/views/: vw_board_billings.sql  vw_customer_details.sql  vw_daily_billings.sql
kami_reports/messages/: account_message.json  beexp_manager_message.json  beexp_seller_message.json  board_message.json  comercial_message.json  contacts.json  geral_message.json  messages.py  sellers_contacts.json
kami_reports/messages/templates/: account_message.md  beexp_seller_message.md  board_message .md  comercial_message.md  default_message.md
messages/: contacts.json  messages.py
messages/templates/: account_message.md  beexp_manager_message.md  board_message.md  comercial_message.md  default_message.md  geral_message.md
